exports[`BpkPopover should render correctly 1`] = `
<section
  className="bpk-popover"
  tabIndex="-1">
  <span
    className="bpk-popover__arrow"
    role="presentation" />
  <div
    className="bpk-popover__inner">
    <div
      className="bpk-popover__body bpk-popover__body--padded">
      My popover content
    </div>
    <footer
      className="bpk-popover__footer">
      <button
        className="bpk-link"
        onClick={[Function]}
        type="button">
        Close
      </button>
    </footer>
  </div>
</section>
`;

exports[`BpkPopover should render correctly with "className" attribute 1`] = `
<section
  className="bpk-popover my-custom-class"
  tabIndex="-1">
  <span
    className="bpk-popover__arrow"
    role="presentation" />
  <div
    className="bpk-popover__inner">
    <div
      className="bpk-popover__body bpk-popover__body--padded">
      My popover content
    </div>
    <footer
      className="bpk-popover__footer">
      <button
        className="bpk-link"
        onClick={[Function]}
        type="button">
        Close
      </button>
    </footer>
  </div>
</section>
`;

exports[`BpkPopover should render correctly with "padded" attribute equal to false 1`] = `
<section
  className="bpk-popover"
  tabIndex="-1">
  <span
    className="bpk-popover__arrow"
    role="presentation" />
  <div
    className="bpk-popover__inner">
    <div
      className="bpk-popover__body">
      My popover content
    </div>
    <footer
      className="bpk-popover__footer">
      <button
        className="bpk-link"
        onClick={[Function]}
        type="button">
        Close
      </button>
    </footer>
  </div>
</section>
`;
